# Thor_helpdesk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY-CONVERGENCE-PLAN.md  SECURITY-REVIEW-CSO.md  SECURITY-REVIEW.md  design-mockup.html  docker-compose.yml  grupos-thor-zapi.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: security.yml
alembic/versions/: 202605190001_initial_schema.py  202605200001_message_media.py  202605200002_media_storage_key.py  202605200003_agent_role.py  202605200004_delete_cascades.py  202605200005_client_cnpj_access_credentials.py  202605200006_client_employees_roles.py  202605200007_employee_timestamp_defaults.py  202605200008_agent_must_change_password.py  202605200009_pending_ticket_messages.py  202605210010_agent_phone.py  202605210011_ticket_public_links.py  202605210012_security_audit_and_revoke.py  202605210013_ticket_message_attachments.py  202605220014_public_link_codes.py  202605220015_agent_totp.py
app/: main.py
app/api/: __init__.py  admin.py  auth.py  deps.py  media.py  public.py  reports.py  tickets.py  webhooks.py
app/core/: audit.py  config.py  database.py  public_links.py  ratelimit.py  security.py  tenant.py  (+1 more)
evolucoes/: 2026-05-21-portal-cliente-ticket-web.md  2026-05-21-portal-publico-uploads.md  vps_snapshot.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  security-headers.conf  tailwind.config.js
scripts/: bootstrap_admin.py
tests/: test_public_link_security.py  test_ticket_status_notifications.py  test_totp_security.py
(+47 files in other folders)
