[project]
name = "thor-helpdesk"
version = "0.1.0"
description = "THOR-HelpDesk SaaS para suporte ERP TOTVS Linha WinThor com WhatsApp via Z-API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "bcrypt>=3.2.2,<4.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.2",
  "pydantic-settings>=2.5.2",
  "PyJWT[crypto]>=2.9.0",
  "cryptography>=43.0.0",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.8"
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
